Nav scroll integration

--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">Section1</a></li>
-            <li><a href="#contact">Section2</a></li>
-            <li class="dropdown">
+            <li><a href="#section1">Section1</a></li>
+            <li><a href="#section2">Section2</a></li>
+            <li><a href="#section3">Section3</a></li>
+            <li><a href="#section4">Section4</a></li>
+            <li><a href="#section5">Section5</a></li>
+            <!--<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Section3 <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
@@ -114,13 +116,13 @@
                 <li><a href="#">Separated link</a></li>
                 <li><a href="#">One more separated link</a></li>
               </ul>
-            </li>
+            </li>-->
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <!--<ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/">Default</a></li>
-            <!--<li><a href="../navbar-static-top/">Static top</a></li>
-            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>-->
-          </ul>
+            <li><a href="../navbar-static-top/">Static top</a></li>
+            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+          </ul>-->
         </div><!--/.nav-collapse -->
       </div>
     </nav>
@@ -255,7 +257,7 @@
               <div class="spacer s1 scrollblock"></div>
               <a id="bottom"></a>
               <div class="spacer s0 scrollblock"></div>-->
-                          <form class="move">
+             <!--<form class="move">
                 <fieldset>
                   <legend>Beautifill</legend>
                   <p><a href="#section1">Section1</a></p>
@@ -265,7 +267,7 @@
                   <p><a href="#section5">Section5</a></p>
                   <p><a href="#animate">Section5</a></p>
                 </fieldset>
-              </form>
+              </form>-->
               <a id="section1"></a>
               <div class="spacer s1 scrollblock"></div>
               <a id="section2"></a>
