--- a/index.html
+++ b/index.html
@@ -272,7 +272,26 @@
                 </fieldset>
               </form>-->
               <a id="section1"></a>
-              <div class="spacer s1 scrollblock"></div>
+              <div class="spacer s1 scrollblock">
+                               <div>
+                  <img src="img/section1Image01.png"/>
+                </div>
+                <div>
+                                 <ul>
+                  <li><div><img style="padding:12px 15px" src="img/section1Icon01.png"/></div></li>
+                  <li><div><img style="padding:0 15px" src="img/section1Icon02.png"/></div></li>
+                  <li><div><img style="padding:17px 15px" src="img/section1Icon03.png"/></div></li>
+                  <li><div><img style="padding:14px 15px" src="img/section1Icon04.png"/></div></li>
+                </ul>
+                  <h1>Time to</h1>
+                  <h1>Dazzeling</h1>
+                </div>
+                <div>                
+                  <h4>Look your best</h4>
+                  <p>Ask your doctor about the many products available in non-surgical skin treatments.</p>
+               </div>
+
+              </div>
               <a id="section2"></a>
               <div class="spacer s1 scrollblock"></div>
               <a id="section3"></a>
